<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.holmusk.eatright.ui.activities.FoodDetailsActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="5dp">

                <Spinner
                    android:id="@+id/portions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/trackCaloriesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/track_calories"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pie_chart_height"
                android:layout_marginLeft="@dimen/chart_horizontal_margin"
                android:layout_marginRight="@dimen/chart_horizontal_margin"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/calories"/>

                        <TextView
                            android:id="@+id/calorie"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/fat"/>

                        <TextView
                            android:id="@+id/fat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/protein"/>

                        <TextView
                            android:id="@+id/protein"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/carbohydrate"/>

                        <TextView
                            android:id="@+id/carbohydrate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/saturated"/>

                        <TextView
                            android:id="@+id/saturated"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/polyunsaturated"/>

                        <TextView
                            android:id="@+id/polyunsaturated"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/monounsaturated"/>

                        <TextView
                            android:id="@+id/monounsaturated"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/cholesterol"/>

                        <TextView
                            android:id="@+id/cholesterol"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/sodium"/>

                        <TextView
                            android:id="@+id/sodium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/potassium"/>

                        <TextView
                            android:id="@+id/potassium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/sugar"/>

                        <TextView
                            android:id="@+id/sugar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/default_gram_value"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
