<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.holmusk.eatright.ui.fragments.MyStatFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:background="@drawable/bg_rounded_corner"
            android:text="@string/search_message"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="#5C6BC0"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.db.chart.view.LineChartView
                    xmlns:chart="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/linechart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/chart_description"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/resetDataBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:text="@string/reset"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
